
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {int dummy; } ;


 scalar_t__ EPERM ;
 int SIGCONT ;
 scalar_t__ errno ;
 int fflush (int ) ;
 scalar_t__ geteuid () ;
 scalar_t__ kill (int,int ) ;
 int printf (char*,...) ;
 int snprintf (char*,int,char*,int) ;
 scalar_t__ stat (char*,struct stat*) ;

void check_proc_vs_kill(int listpids)
{
  struct stat st;
  int i, counter;
  char buf[520];

  printf("proc-vs-kill() test: \n");
  fflush(0);

  if (geteuid() == 0)
  {
    printf("  Error: Running as root. NOT performing /proc-vs-kill() test.\n");
    return;
  }

  if (listpids == 1)
  {
    printf("Listing mismatching PIDs:\n");
  }

  counter = 0;
  for (i = 1; i < 65535; i ++)
  {
    if ((kill(i, SIGCONT) != 0) && (errno == EPERM))
    {
      snprintf(buf, 511, "/proc/%d", i);
      if (stat(buf, &st) != 0)
      {
        counter ++;
        if (listpids == 1)
        {
          printf("%.5d ", i);
          if (counter%8 == 0)
          {
            printf("\n");
          }
        }
      }
    }
  }
  if (listpids == 1)
  {
    printf("\n");
  }
  if (counter == 0)
  {
    printf("  Normal: No mismatches found.\n");
  } else
  {
    printf("  ManTrap? %d mismatching PIDs found.\n", counter);
  }
}
