; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_20380.c_check_proc_vs_kill.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_20380.c_check_proc_vs_kill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"proc-vs-kill() test: \0A\00", align 1
@.str.1 = private unnamed_addr constant [64 x i8] c"  Error: Running as root. NOT performing /proc-vs-kill() test.\0A\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"Listing mismatching PIDs:\0A\00", align 1
@SIGCONT = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EPERM = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [9 x i8] c"/proc/%d\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"%.5d \00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.6 = private unnamed_addr constant [32 x i8] c"  Normal: No mismatches found.\0A\00", align 1
@.str.7 = private unnamed_addr constant [39 x i8] c"  ManTrap? %d mismatching PIDs found.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_proc_vs_kill(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.stat, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [520 x i8], align 16
  store i32 %0, i32* %2, align 4
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @fflush(i32 0)
  %9 = call i64 (...) @geteuid()
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.1, i64 0, i64 0))
  br label %71

13:                                               ; preds = %1
  %14 = load i32, i32* %2, align 4
  %15 = icmp eq i32 %14, 1
  br i1 %15, label %16, label %18

16:                                               ; preds = %13
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %13
  store i32 0, i32* %5, align 4
  store i32 1, i32* %4, align 4
  br label %19

19:                                               ; preds = %55, %18
  %20 = load i32, i32* %4, align 4
  %21 = icmp slt i32 %20, 65535
  br i1 %21, label %22, label %58

22:                                               ; preds = %19
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* @SIGCONT, align 4
  %25 = call i64 @kill(i32 %23, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %54

27:                                               ; preds = %22
  %28 = load i64, i64* @errno, align 8
  %29 = load i64, i64* @EPERM, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %54

31:                                               ; preds = %27
  %32 = getelementptr inbounds [520 x i8], [520 x i8]* %6, i64 0, i64 0
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @snprintf(i8* %32, i32 511, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i32 %33)
  %35 = getelementptr inbounds [520 x i8], [520 x i8]* %6, i64 0, i64 0
  %36 = call i64 @stat(i8* %35, %struct.stat* %3)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %53

38:                                               ; preds = %31
  %39 = load i32, i32* %5, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %5, align 4
  %41 = load i32, i32* %2, align 4
  %42 = icmp eq i32 %41, 1
  br i1 %42, label %43, label %52

43:                                               ; preds = %38
  %44 = load i32, i32* %4, align 4
  %45 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i32 %44)
  %46 = load i32, i32* %5, align 4
  %47 = srem i32 %46, 8
  %48 = icmp eq i32 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %43
  %50 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0))
  br label %51

51:                                               ; preds = %49, %43
  br label %52

52:                                               ; preds = %51, %38
  br label %53

53:                                               ; preds = %52, %31
  br label %54

54:                                               ; preds = %53, %27, %22
  br label %55

55:                                               ; preds = %54
  %56 = load i32, i32* %4, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* %4, align 4
  br label %19

58:                                               ; preds = %19
  %59 = load i32, i32* %2, align 4
  %60 = icmp eq i32 %59, 1
  br i1 %60, label %61, label %63

61:                                               ; preds = %58
  %62 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0))
  br label %63

63:                                               ; preds = %61, %58
  %64 = load i32, i32* %5, align 4
  %65 = icmp eq i32 %64, 0
  br i1 %65, label %66, label %68

66:                                               ; preds = %63
  %67 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.6, i64 0, i64 0))
  br label %71

68:                                               ; preds = %63
  %69 = load i32, i32* %5, align 4
  %70 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.7, i64 0, i64 0), i32 %69)
  br label %71

71:                                               ; preds = %11, %68, %66
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i64 @geteuid(...) #1

declare dso_local i64 @kill(i32, i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i64 @stat(i8*, %struct.stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
